2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl: Do not hardcoded path
	* installcheck/amoverview.pl: Increase --diskwidth to 200

2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix compilation

2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	driver can do vault.
	* common-src/conffile.c: s/CONF_AMVAULT_STORAGE/CONF_VAULT_STORAGE/,
	  add CONF_VAULT
	* common-src/conffile.h: Add vault_list_t and CONFTYPE_VAULT_LIST
	* device-src/xfer-dest-taper-cacher.c: Improve debugging statement
	* device-src/xfer-dest-taper-directtcp.c: Improve debugging statement
	* device-src/xfer-dest-taper-splitter.c: Improve debugging statement
	* device-src/xfer-source-recovery.c: Improve debugging statement
	* server-src/xfer-dest-holding.c: Improve debugging statement
	* man/xml-source/amanda.conf.5.xml: Document storage and vault-storage
	* perl/Amanda/Amflush.pm: s/storage_dest/dst_storage/
	* perl/Amanda/Changer/disk.pm: Check $self->{'dir'} is defined
	* perl/Amanda/Changer/robot.pm: Check $info->{'state'} is defined
	* perl/Amanda/Cmdfile.swg: Change some field names.
	* perl/Amanda/Config.swg: Add CONFTYPE_VAULT_LIST.
	* perl/Amanda/DB/Catalog.pm (_load_tapelist): Always load.
	* perl/Amanda/Recovery/Clerk.pm (close_volume): New method
	* perl/Amanda/Recovery/Scan.pmA: Fix message
	* perl/Amanda/Report.pm: Fix for vault.
	* perl/Amanda/Report/human.pm: Fix for vault.
	* perl/Amanda/Status.pm: Fix for vault.
	* perl/Amanda/Taper/Controller.pm: Add msg_VAULT_WRITE and
	  msg_CLOSE_SOURCE_VOLUME
	* perl/Amanda/Taper/Protocol.pm: Add VAULT_WRITE, CLOSED_VOLUME,
	  OPENED_SOURCE_VOLUME, CLOSE_SOURCE_VOLUME, CLOSED_SOURCE_VOLUME
	* perl/Amanda/Taper/Scan.pm: Remove unused code
	* perl/Amanda/Taper/Scribe.pm (close_volume): Fix
	* perl/Amanda/Taper/Scribe.pm (close_source_volume): New method.
	* perl/Amanda/Taper/Worker.pm: Add VAULT_WRITE, CLOSE_SOURCE_VOLUME,