@@ -1,3 +1,7 @@
+2015-04-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driverio.c, server-src/planner.c: Fix bug found by
+	  coverity.
+
 2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
 	* installcheck/Amanda_Rest_Dumps.pl: Do not hardcoded path
 	* installcheck/amoverview.pl: Increase --diskwidth to 200
